KH-501: Changes resulting from QA to fix NCD Monitoring reports

--- a/base/configs/superset/assets/charts/Registered_patients_aged_40_and_above_have_had_their_NCD_screening_for_the_first_time_with_a_follow-up_date_and_diagnosed_with_Hypertension__Diabetes_and_were_given_medication_with_at_least_a_4_weeks_prescription_41.yaml
+++ b/base/configs/superset/assets/charts/Registered_patients_aged_40_and_above_have_had_their_NCD_screening_for_the_first_time_with_a_follow-up_date_and_diagnosed_with_Hypertension__Diabetes_and_were_given_medication_with_at_least_a_4_weeks_prescription_41.yaml
@@ -124,6 +124,7 @@ params:
   extra_form_data: {}
   dashboards:
   - 13
+  annotation_layers: []
 query_context: '{"datasource":{"id":26,"type":"table"},"force":false,"queries":[{"filters":[{"col":"Visit
   Start date","op":"TEMPORAL_RANGE","val":"No filter"},{"col":"indicator","op":"==","val":"80-pecent-followup-with-hypertension-iabetes-and-medication"}],"extras":{"time_grain_sqla":"P1D","having":"","where":""},"applied_time_extras":{},"columns":["Facility
   Name","Facility District","Facility Province","OpenMRS ID","Patient''s First name","Patient''s
