--- a/base/configs/superset/assets/dashboards/Cervical_Cancer_Screening_HC_Raw_Data_11.yaml
+++ b/base/configs/superset/assets/dashboards/Cervical_Cancer_Screening_HC_Raw_Data_11.yaml
@@ -1,30 +1,31 @@
-dashboard_title: HC NCD OPD Register Report Dashboard
+dashboard_title: Cervical Cancer Screening HC Raw Data
 description: null
 css: ''
-slug: null
-certified_by: ''
-certification_details: ''
+slug: ccs-hc-raw-data
+certified_by: null
+certification_details: null
 published: true
-uuid: 5ad1d328-14a9-4063-bc27-ee40546d7581
+uuid: 09b98e8e-4a65-494a-8378-b78faf16fe25
 position:
-  CHART-Ab9xXvvBoP:
+  CHART-explore-32-1:
     children: []
-    id: CHART-Ab9xXvvBoP
+    id: CHART-explore-32-1
     meta:
-      chartId: 44
-      height: 76
-      sliceName: HC NCD OPD Register Report
-      uuid: 21650553-f9e7-4249-a0b2-088c1aaca1ea
+      chartId: 16
+      height: 101
+      sliceName: HC Raw Data
+      sliceNameOverride: Cervical Cancer Screening HC Raw Data
+      uuid: a133510d-1fd5-405c-8db9-0ad187e7c73c
       width: 12
     parents:
     - ROOT_ID
     - GRID_ID
-    - ROW-XCnHAguP-V
+    - ROW-oSjDcrv5vE
     type: CHART
   DASHBOARD_VERSION_KEY: v2
   GRID_ID:
     children:
-    - ROW-XCnHAguP-V
+    - ROW-oSjDcrv5vE
     id: GRID_ID
     parents:
     - ROOT_ID
@@ -32,18 +33,19 @@ position:
   HEADER_ID:
     id: HEADER_ID
     meta:
-      text: HC NCD OPD Register Report Dashboard
+      text: Cervical Cancer Screening HC Raw Data
     type: HEADER
   ROOT_ID:
     children:
     - GRID_ID
     id: ROOT_ID
     type: ROOT
-  ROW-XCnHAguP-V:
+  ROW-oSjDcrv5vE:
     children:
-    - CHART-Ab9xXvvBoP
-    id: ROW-XCnHAguP-V
+    - CHART-explore-32-1
+    id: ROW-oSjDcrv5vE
     meta:
+      '0': ROOT_ID
       background: BACKGROUND_TRANSPARENT
     parents:
     - ROOT_ID
@@ -52,34 +54,31 @@ position:
 metadata:
   color_scheme: ''
   refresh_frequency: 0
-  shared_label_colors: {}
-  color_scheme_domain: []
   expanded_slices: {}
   label_colors: {}
   timed_refresh_immune_slices: []
   cross_filters_enabled: false
   default_filters: '{}'
   chart_configuration:
-    '44':
-      id: 44
+    '16':
+      id: 16
       crossFilters:
         scope: global
         chartsInScope: []
   native_filter_configuration:
-  - id: NATIVE_FILTER-aWX-Gl58W
+  - id: NATIVE_FILTER-yG0sftpoN
     controlValues:
       enableEmptyFilter: false
       defaultToFirstItem: false
       multiSelect: true
       searchAllOptions: true
       inverseSelection: false
-    name: "\u1798\u1793\u17D2\u1791\u17B8\u179A\u179F\u17BB\u1781\u17B6\u1797\u17B7\
-      \u1794\u17B6\u179B\u1781\u17C1\u178F\u17D2\u178F (Provincial Health Department)"
+    name: "\u1781\u17C1\u178F\u17D2\u178F (Province)"
     filterType: filter_select
     targets:
     - column:
-        name: Facility Province
-      datasetUuid: 262d446a-2c07-4b3b-8ab0-a792b242dea4
+        name: visit_province
+      datasetUuid: 5457e2a2-5943-4b14-8a0e-878c7ba4bc8f
     defaultDataMask:
       extraFormData: {}
       filterState: {}
@@ -92,9 +91,9 @@ metadata:
     type: NATIVE_FILTER
     description: ''
     chartsInScope:
-    - 142
+    - 16
     tabsInScope: []
-  - id: NATIVE_FILTER-Msdpr8SxL
+  - id: NATIVE_FILTER-afAlHXca9
     controlValues:
       enableEmptyFilter: false
       defaultToFirstItem: false
@@ -102,17 +101,18 @@ metadata:
       searchAllOptions: true
       inverseSelection: false
     name: "\u179F\u17D2\u179A\u17BB\u1780\u1794\u17D2\u179A\u178F\u17B7\u1794\u178F\
-      \u17D2\u178F\u17B7 (Operational District)"
+      \u17D2\u178F\u17B7 (District)"
     filterType: filter_select
     targets:
     - column:
-        name: Facility District
-      datasetUuid: 262d446a-2c07-4b3b-8ab0-a792b242dea4
+        name: visit_district
+      datasetUuid: 5457e2a2-5943-4b14-8a0e-878c7ba4bc8f
     defaultDataMask:
       extraFormData: {}
       filterState: {}
       ownState: {}
-    cascadeParentIds: []
+    cascadeParentIds:
+    - NATIVE_FILTER-yG0sftpoN
     scope:
       rootPath:
       - ROOT_ID
@@ -120,28 +120,29 @@ metadata:
     type: NATIVE_FILTER
     description: ''
     chartsInScope:
-    - 142
+    - 16
     tabsInScope: []
-  - id: NATIVE_FILTER-pJ6UTB2-p
+  - id: NATIVE_FILTER-OhmPrHMDt
     controlValues:
       enableEmptyFilter: false
       defaultToFirstItem: false
       multiSelect: true
       searchAllOptions: true
       inverseSelection: false
-    name: "\u1788\u17D2\u1798\u17C4\u17C7\u1793\u17B7\u1784\u179B\u17C1\u1781\u1780\
-      \u17BC\u178A\u1798\u17BC\u179B\u178A\u17D2\u178B\u17B6\u1793\u179F\u17BB\u1781\
-      \u17B6\u1797\u17B7\u1794\u17B6\u179B (Health Facility's Name)"
+    name: "\u1798\u17BC\u179B\u178A\u17D2\u178B\u17B6\u1793\u179F\u17BB\u1781\u17B6\
+      \u1797\u17B7\u1794\u17B6\u179B (Health Facility)"
     filterType: filter_select
     targets:
     - column:
-        name: Facility Name
-      datasetUuid: 262d446a-2c07-4b3b-8ab0-a792b242dea4
+        name: visit_hf_name
+      datasetUuid: 5457e2a2-5943-4b14-8a0e-878c7ba4bc8f
     defaultDataMask:
       extraFormData: {}
       filterState: {}
       ownState: {}
-    cascadeParentIds: []
+    cascadeParentIds:
+    - NATIVE_FILTER-yG0sftpoN
+    - NATIVE_FILTER-afAlHXca9
     scope:
       rootPath:
       - ROOT_ID
@@ -149,14 +150,23 @@ metadata:
     type: NATIVE_FILTER
     description: ''
     chartsInScope:
-    - 142
+    - 16
     tabsInScope: []
-  - id: NATIVE_FILTER-a7uk2DuoT
+  - id: NATIVE_FILTER_DIVIDER-Wgo1hNZdF
+    type: DIVIDER
+    scope:
+      rootPath:
+      - ROOT_ID
+      excluded: []
+    title: "\u179A\u1799\u17C8\u1796\u17C1\u179B\u179A\u17B6\u1799\u1780\u17B6\u179A\
+      \u178E\u17CD (Reporting Period)"
+    description: ''
+    chartsInScope: []
+    tabsInScope: []
+  - id: NATIVE_FILTER-kt_radbAb
     controlValues:
       enableEmptyFilter: false
-    name: "\u1780\u17B6\u179A\u179A\u17B6\u1799\u1780\u17B6\u179A\u178E\u17CD\u17A2\
-      \u17C6\u1796\u17B8\u1787\u17BD\u179A\u1796\u17C1\u179B\u179C\u17C1\u179B\u17B6\
-      \ (Reporting Time Range)"
+    name: "\u1787\u17BD\u179A\u1796\u17C1\u179B\u179C\u17C1\u179B\u17B6 (Time Range)"
     filterType: filter_time
     targets:
     - {}
@@ -172,13 +182,15 @@ metadata:
     type: NATIVE_FILTER
     description: ''
     chartsInScope:
-    - 142
+    - 32
     tabsInScope: []
+  shared_label_colors: {}
+  color_scheme_domain: []
   global_chart_configuration:
     scope:
       rootPath:
       - ROOT_ID
       excluded: []
     chartsInScope:
-    - 44
+    - 16
 version: 1.0.0
