--- a/base/configs/superset/assets/dashboards/Cervical_Cancer_Screening_RH_Raw_Data_20.yaml
+++ b/base/configs/superset/assets/dashboards/Cervical_Cancer_Screening_RH_Raw_Data_20.yaml
@@ -1,30 +1,31 @@
-dashboard_title: NCD RH EMR Raw Data
+dashboard_title: Cervical Cancer Screening RH Raw Data
 description: null
 css: ''
-slug: null
+slug: ccs-rh-raw-data
 certified_by: null
 certification_details: null
 published: true
-uuid: 9e577f81-c944-4f84-a73b-728fd3ac4fec
+uuid: 80f09cd1-7f95-4e68-8633-39f50bd5b4be
 position:
-  CHART-explore-48-1:
+  CHART-explore-31-1:
     children: []
-    id: CHART-explore-48-1
+    id: CHART-explore-31-1
     meta:
-      chartId: 39
-      height: 103
-      sliceName: NCD RH EMR Raw Data
-      uuid: 52bda91a-f96f-4984-aaa6-d96ac6e50497
+      chartId: 67
+      height: 102
+      sliceName: Cervical Cancer Screening RH Raw Data
+      sliceNameOverride: Cervical Cancer Screening RH Raw Data
+      uuid: bd742ed6-04eb-4a99-bdee-fd11809efa9d
       width: 12
     parents:
     - ROOT_ID
     - GRID_ID
-    - ROW-GVUEMPrxv6
+    - ROW-FBkhnGsLdw
     type: CHART
   DASHBOARD_VERSION_KEY: v2
   GRID_ID:
     children:
-    - ROW-GVUEMPrxv6
+    - ROW-FBkhnGsLdw
     id: GRID_ID
     parents:
     - ROOT_ID
@@ -32,17 +33,17 @@ position:
   HEADER_ID:
     id: HEADER_ID
     meta:
-      text: NCD RH EMR Raw Data
+      text: Cervical Cancer Screening RH Raw Data
     type: HEADER
   ROOT_ID:
     children:
     - GRID_ID
     id: ROOT_ID
     type: ROOT
-  ROW-GVUEMPrxv6:
+  ROW-FBkhnGsLdw:
     children:
-    - CHART-explore-48-1
-    id: ROW-GVUEMPrxv6
+    - CHART-explore-31-1
+    id: ROW-FBkhnGsLdw
     meta:
       '0': ROOT_ID
       background: BACKGROUND_TRANSPARENT
@@ -53,8 +54,6 @@ position:
 metadata:
   color_scheme: ''
   refresh_frequency: 0
-  shared_label_colors: {}
-  color_scheme_domain: []
   expanded_slices: {}
   label_colors: {}
   timed_refresh_immune_slices: []
@@ -62,19 +61,19 @@ metadata:
   default_filters: '{}'
   chart_configuration: {}
   native_filter_configuration:
-  - id: NATIVE_FILTER-Yb21QMiDs
+  - id: NATIVE_FILTER-PD0hPBsQB
     controlValues:
       enableEmptyFilter: false
       defaultToFirstItem: false
       multiSelect: true
-      searchAllOptions: false
+      searchAllOptions: true
       inverseSelection: false
     name: "\u1781\u17C1\u178F\u17D2\u178F (Province)"
     filterType: filter_select
     targets:
     - column:
         name: visit_province
-      datasetUuid: 8480636a-399d-438b-a307-a2a1d160ed05
+      datasetUuid: 2a5e581b-ad24-4018-8c33-4a5b33b3eb02
     defaultDataMask:
       extraFormData: {}
       filterState: {}
@@ -87,14 +86,14 @@ metadata:
     type: NATIVE_FILTER
     description: ''
     chartsInScope:
-    - 48
+    - 31
     tabsInScope: []
-  - id: NATIVE_FILTER-MpRnJBI0D
+  - id: NATIVE_FILTER-hDeXIpbUX
     controlValues:
       enableEmptyFilter: false
       defaultToFirstItem: false
       multiSelect: true
-      searchAllOptions: false
+      searchAllOptions: true
       inverseSelection: false
     name: "\u179F\u17D2\u179A\u17BB\u1780\u1794\u17D2\u179A\u178F\u17B7\u1794\u178F\
       \u17D2\u178F\u17B7 (District)"
@@ -102,13 +101,13 @@ metadata:
     targets:
     - column:
         name: visit_district
-      datasetUuid: 8480636a-399d-438b-a307-a2a1d160ed05
+      datasetUuid: 2a5e581b-ad24-4018-8c33-4a5b33b3eb02
     defaultDataMask:
       extraFormData: {}
       filterState: {}
       ownState: {}
     cascadeParentIds:
-    - NATIVE_FILTER-Yb21QMiDs
+    - NATIVE_FILTER-PD0hPBsQB
     scope:
       rootPath:
       - ROOT_ID
@@ -116,29 +115,29 @@ metadata:
     type: NATIVE_FILTER
     description: ''
     chartsInScope:
-    - 48
+    - 31
     tabsInScope: []
-  - id: NATIVE_FILTER-UIUhzYcSc
+  - id: NATIVE_FILTER-wYk1RROkY
     controlValues:
       enableEmptyFilter: false
       defaultToFirstItem: false
       multiSelect: true
-      searchAllOptions: false
+      searchAllOptions: true
       inverseSelection: false
     name: "\u1798\u17BC\u179B\u178A\u17D2\u178B\u17B6\u1793\u179F\u17BB\u1781\u17B6\
       \u1797\u17B7\u1794\u17B6\u179B (Health Facility)"
     filterType: filter_select
     targets:
     - column:
-        name: hf_name
-      datasetUuid: 8480636a-399d-438b-a307-a2a1d160ed05
+        name: visit_hf_name
+      datasetUuid: 2a5e581b-ad24-4018-8c33-4a5b33b3eb02
     defaultDataMask:
       extraFormData: {}
       filterState: {}
       ownState: {}
     cascadeParentIds:
-    - NATIVE_FILTER-Yb21QMiDs
-    - NATIVE_FILTER-MpRnJBI0D
+    - NATIVE_FILTER-PD0hPBsQB
+    - NATIVE_FILTER-hDeXIpbUX
     scope:
       rootPath:
       - ROOT_ID
@@ -146,9 +145,9 @@ metadata:
     type: NATIVE_FILTER
     description: ''
     chartsInScope:
-    - 48
+    - 31
     tabsInScope: []
-  - id: NATIVE_FILTER_DIVIDER-1556E-tD3
+  - id: NATIVE_FILTER_DIVIDER-VgQCSoq11
     type: DIVIDER
     scope:
       rootPath:
@@ -157,7 +156,9 @@ metadata:
     title: "\u179A\u1799\u17C8\u1796\u17C1\u179B\u179A\u17B6\u1799\u1780\u17B6\u179A\
       \u178E\u17CD (Reporting Period)"
     description: ''
-  - id: NATIVE_FILTER-HelaaDiLC
+    chartsInScope: []
+    tabsInScope: []
+  - id: NATIVE_FILTER-lERYHXfKD
     controlValues:
       enableEmptyFilter: false
     name: "\u1787\u17BD\u179A\u1796\u17C1\u179B\u179C\u17C1\u179B\u17B6 (Time Range)"
@@ -175,4 +176,9 @@ metadata:
       excluded: []
     type: NATIVE_FILTER
     description: ''
+    chartsInScope:
+    - 31
+    tabsInScope: []
+  shared_label_colors: {}
+  color_scheme_domain: []
 version: 1.0.0
