--- a/base/configs/superset/assets/dashboards/Cervical_Cancer_Screening_for_Women_15.yaml
+++ b/base/configs/superset/assets/dashboards/Cervical_Cancer_Screening_for_Women_15.yaml
@@ -1,92 +1,89 @@
-dashboard_title: "\u1780\u17B6\u179A\u17A2\u1794\u17CB\u179A\u17C6\u179F\u17D2\u178F\
-  \u17D2\u179A\u17B8\u17B1\u17D2\u1799\u1785\u17C1\u17C7\u1796\u17B7\u1793\u17B7\u178F\
-  \u17D2\u1799 \u1793\u17B7\u1784\u179F\u17D2\u1791\u17B6\u1794\u178A\u17C4\u17C7\u178A\
-  \u17C4\u1799\u1781\u17D2\u179B\u17BD\u1793\u17AF\u1784 (Self-breast Educated and\
-  \ Examinated Women)"
+dashboard_title: "\u1780\u17B6\u179A\u1796\u17B7\u1793\u17B7\u178F\u17D2\u1799\u179F\
+  \u17BB\u1781\u1797\u17B6\u1796\u179A\u1780\u1787\u17C6\u1784\u17BA\u1798\u17A0\u17B6\
+  \u179A\u17B8\u1780\u1798\u17B6\u178F\u17CB\u179F\u17D2\u1794\u17BC\u1793 (Cervical\
+  \ Cancer Screening for Women)"
 description: null
 css: ''
 slug: null
 certified_by: null
 certification_details: null
 published: true
-uuid: 6e8f6cf5-6b61-4dbc-ad28-2d6b7d2a13e8
+uuid: 598a8f33-de25-4a18-91b5-a87652c0b1de
 position:
-  CHART-explore-5-1:
+  CHART-explore-1-1:
     children: []
-    id: CHART-explore-5-1
+    id: CHART-explore-1-1
     meta:
-      chartId: 28
-      height: 50
+      chartId: 65
+      height: 39
       sliceName: "\u1785\u17C6\u1793\u17BD\u1793\u179F\u17D2\u178F\u17D2\u179A\u17B8\
-        \u1794\u17B6\u1793\u17A2\u1794\u17CB\u179A\u17C6\u1793\u17B7\u1784\u1796\u17B7\
-        \u1793\u17B7\u178F\u17D2\u1799\u178A\u17C4\u17C7 (# of Women Educated with\
-        \ Breast Examination)"
-      uuid: 411a83c9-d9d1-40a1-abd6-fe56e1169388
+        \u1794\u17B6\u1793 \u1792\u17D2\u179C\u17BE\u178F\u17C1\u179F\u17D2\u178F\
+        \ VIA (# of women with VIA tested)"
+      uuid: a57aa88b-eb68-4d6f-9061-107c47d6b76d
       width: 5
     parents:
     - ROOT_ID
     - GRID_ID
-    - ROW-aQB7JBxYgL
+    - ROW-SynNTx6Wta
     type: CHART
-  CHART-explore-6-1:
+  CHART-explore-2-1:
     children: []
-    id: CHART-explore-6-1
+    id: CHART-explore-2-1
     meta:
-      chartId: 27
-      height: 50
+      chartId: 61
+      height: 39
       sliceName: "\u1785\u17C6\u1793\u17BD\u1793\u179F\u17D2\u178F\u17D2\u179A\u17B8\
         \u1780\u17D2\u1793\u17BB\u1784\u1798\u17BD\u1799\u1794\u17D2\u179A\u1797\u17C1\
-        \u1791\u1793\u17C3\u1780\u17B6\u179A\u1798\u1780\u179B\u17C1\u1784 (# of Women\
-        \ per Visit Type)"
+        \u1791\u1793\u17C3\u1780\u17B6\u179A\u1798\u1780\u179B\u17C1\u1784 (# of women\
+        \ per visit type)"
       sliceNameOverride: "\u1785\u17C6\u1793\u17BD\u1793\u179F\u17D2\u178F\u17D2\u179A\
         \u17B8\u1780\u17D2\u1793\u17BB\u1784\u1798\u17BD\u1799\u1794\u17D2\u179A\u1797\
         \u17C1\u1791\u1793\u17C3\u1780\u17B6\u179A\u1798\u1780\u179B\u17C1\u1784 (Visit\
         \ Type)"
-      uuid: 8a137f25-14a7-4a3e-a740-0cbd17ca1de1
+      uuid: ae4b7d1d-1bae-4a6f-bec4-71826613e857
       width: 7
     parents:
     - ROOT_ID
     - GRID_ID
-    - ROW-aQB7JBxYgL
+    - ROW-SynNTx6Wta
     type: CHART
-  CHART-explore-7-1:
+  CHART-explore-3-1:
     children: []
-    id: CHART-explore-7-1
+    id: CHART-explore-3-1
     meta:
-      chartId: 30
-      height: 50
+      chartId: 18
+      height: 43
       sliceName: "\u1780\u17B6\u179A\u1782\u17D2\u179A\u1794\u17CB\u1782\u17D2\u179A\
         \u1784 (Management)"
-      uuid: 8263131a-e7cf-414a-a89d-e742a454f032
+      uuid: 87838d2c-ca56-44f1-a3a7-ec7648dddcc3
       width: 5
     parents:
     - ROOT_ID
     - GRID_ID
-    - ROW-rxvWan3wgG
+    - ROW-heF7YIV8Fy
     type: CHART
-  CHART-explore-8-1:
+  CHART-explore-4-1:
     children: []
-    id: CHART-explore-8-1
+    id: CHART-explore-4-1
     meta:
-      chartId: 29
-      height: 50
-      sliceName: "\u179B\u1791\u17D2\u1792\u1795\u179B\u1780\u17B6\u179A\u1796\u17B7\
-        \u1793\u17B7\u178F\u17D2\u1799\u179F\u17D2\u1791\u17B6\u1794\u178A\u17C4\u17C7\
-        \u178A\u17C4\u1799\u1798\u1793\u17D2\u178F\u17D2\u179A\u17B8\u179F\u17BB\u1781\
-        \u17B6\u1797\u17B7\u1794\u17B6\u179B (Result of Breast Examination by Health\
-        \ Staff)"
-      uuid: 70116224-991f-4856-9a6a-3c625f0ad796
+      chartId: 45
+      height: 43
+      sliceName: "\u179B\u1791\u17D2\u1792\u1795\u179B\u178F\u17C1\u179F\u17D2\u178F\
+        \ VIA (# of women per VIA result)"
+      sliceNameOverride: "\u179B\u1791\u17D2\u1792\u1795\u179B\u178F\u17C1\u179F\u17D2\
+        \u178F VIA (VIA result)"
+      uuid: bc93b773-a54f-4070-9624-681d4940207e
       width: 7
     parents:
     - ROOT_ID
     - GRID_ID
-    - ROW-rxvWan3wgG
+    - ROW-heF7YIV8Fy
     type: CHART
   DASHBOARD_VERSION_KEY: v2
   GRID_ID:
     children:
-    - ROW-aQB7JBxYgL
-    - ROW-rxvWan3wgG
+    - ROW-SynNTx6Wta
+    - ROW-heF7YIV8Fy
     id: GRID_ID
     parents:
     - ROOT_ID
@@ -94,22 +91,21 @@ position:
   HEADER_ID:
     id: HEADER_ID
     meta:
-      text: "\u1780\u17B6\u179A\u17A2\u1794\u17CB\u179A\u17C6\u179F\u17D2\u178F\u17D2\
-        \u179A\u17B8\u17B1\u17D2\u1799\u1785\u17C1\u17C7\u1796\u17B7\u1793\u17B7\u178F\
-        \u17D2\u1799 \u1793\u17B7\u1784\u179F\u17D2\u1791\u17B6\u1794\u178A\u17C4\u17C7\
-        \u178A\u17C4\u1799\u1781\u17D2\u179B\u17BD\u1793\u17AF\u1784 (Self-breast\
-        \ Educated and Examinated Women)"
+      text: "\u1780\u17B6\u179A\u1796\u17B7\u1793\u17B7\u178F\u17D2\u1799\u179F\u17BB\
+        \u1781\u1797\u17B6\u1796\u179A\u1780\u1787\u17C6\u1784\u17BA\u1798\u17A0\u17B6\
+        \u179A\u17B8\u1780\u1798\u17B6\u178F\u17CB\u179F\u17D2\u1794\u17BC\u1793 (Cervical\
+        \ Cancer Screening for Women)"
     type: HEADER
   ROOT_ID:
     children:
     - GRID_ID
     id: ROOT_ID
     type: ROOT
-  ROW-aQB7JBxYgL:
+  ROW-SynNTx6Wta:
     children:
-    - CHART-explore-5-1
-    - CHART-explore-6-1
-    id: ROW-aQB7JBxYgL
+    - CHART-explore-1-1
+    - CHART-explore-2-1
+    id: ROW-SynNTx6Wta
     meta:
       '0': ROOT_ID
       background: BACKGROUND_TRANSPARENT
@@ -117,11 +113,11 @@ position:
     - ROOT_ID
     - GRID_ID
     type: ROW
-  ROW-rxvWan3wgG:
+  ROW-heF7YIV8Fy:
     children:
-    - CHART-explore-8-1
-    - CHART-explore-7-1
-    id: ROW-rxvWan3wgG
+    - CHART-explore-4-1
+    - CHART-explore-3-1
+    id: ROW-heF7YIV8Fy
     meta:
       '0': ROOT_ID
       background: BACKGROUND_TRANSPARENT
@@ -130,63 +126,18 @@ position:
     - GRID_ID
     type: ROW
 metadata:
-  color_scheme: bnbColors
+  color_scheme: ''
   refresh_frequency: 0
+  shared_label_colors: {}
+  color_scheme_domain: []
   expanded_slices: {}
   label_colors: {}
   timed_refresh_immune_slices: []
   cross_filters_enabled: false
   default_filters: '{}'
-  chart_configuration:
-    '27':
-      id: 27
-      crossFilters:
-        scope: global
-        chartsInScope:
-        - 28
-        - 29
-        - 30
-    '28':
-      id: 28
-      crossFilters:
-        scope: global
-        chartsInScope:
-        - 27
-        - 29
-        - 30
-    '29':
-      id: 29
-      crossFilters:
-        scope: global
-        chartsInScope:
-        - 27
-        - 28
-        - 30
-    '30':
-      id: 30
-      crossFilters:
-        scope: global
-        chartsInScope:
-        - 27
-        - 28
-        - 29
-  shared_label_colors: {}
-  color_scheme_domain:
-  - '#29696B'
-  - '#5BCACE'
-  - '#F4B02A'
-  - '#F1826A'
-  - '#792EB2'
-  - '#C96EC6'
-  - '#921E50'
-  - '#B27700'
-  - '#9C3498'
-  - '#9C3498'
-  - '#E4679D'
-  - '#C32F0E'
-  - '#9D63CA'
+  chart_configuration: {}
   native_filter_configuration:
-  - id: NATIVE_FILTER-piRuw2c25
+  - id: NATIVE_FILTER-_SzMBkp3w
     controlValues:
       enableEmptyFilter: false
       defaultToFirstItem: false
@@ -198,7 +149,7 @@ metadata:
     targets:
     - column:
         name: health_facility_province
-      datasetUuid: ae55d2c5-1889-45e0-899e-a54beba3e234
+      datasetUuid: 105ff668-0cd3-4674-82d2-bcecc6813280
     defaultDataMask:
       extraFormData: {}
       filterState: {}
@@ -211,31 +162,31 @@ metadata:
     type: NATIVE_FILTER
     description: ''
     chartsInScope:
-    - 27
-    - 28
-    - 29
-    - 30
+    - 1
+    - 2
+    - 3
+    - 4
     tabsInScope: []
-  - id: NATIVE_FILTER-IimrPcVhk
+  - id: NATIVE_FILTER-eW0aXRxZ9
     controlValues:
       enableEmptyFilter: false
       defaultToFirstItem: false
       multiSelect: true
       searchAllOptions: true
-      inverseSelection: true
+      inverseSelection: false
     name: "\u179F\u17D2\u179A\u17BB\u1780\u1794\u17D2\u179A\u178F\u17B7\u1794\u178F\
       \u17D2\u178F\u17B7 (District)"
     filterType: filter_select
     targets:
     - column:
         name: health_facility_district
-      datasetUuid: ae55d2c5-1889-45e0-899e-a54beba3e234
+      datasetUuid: 105ff668-0cd3-4674-82d2-bcecc6813280
     defaultDataMask:
       extraFormData: {}
       filterState: {}
       ownState: {}
     cascadeParentIds:
-    - NATIVE_FILTER-piRuw2c25
+    - NATIVE_FILTER-_SzMBkp3w
     scope:
       rootPath:
       - ROOT_ID
@@ -243,32 +194,32 @@ metadata:
     type: NATIVE_FILTER
     description: ''
     chartsInScope:
-    - 27
-    - 28
-    - 29
-    - 30
+    - 1
+    - 2
+    - 3
+    - 4
     tabsInScope: []
-  - id: NATIVE_FILTER-mQnv_2Xkn
+  - id: NATIVE_FILTER-NjorMjb0S
     controlValues:
       enableEmptyFilter: false
       defaultToFirstItem: false
       multiSelect: true
       searchAllOptions: true
-      inverseSelection: true
+      inverseSelection: false
     name: "\u1798\u17BC\u179B\u178A\u17D2\u178B\u17B6\u1793\u179F\u17BB\u1781\u17B6\
       \u1797\u17B7\u1794\u17B6\u179B (Health Facility)"
     filterType: filter_select
     targets:
     - column:
         name: health_facility_name
-      datasetUuid: ae55d2c5-1889-45e0-899e-a54beba3e234
+      datasetUuid: 105ff668-0cd3-4674-82d2-bcecc6813280
     defaultDataMask:
       extraFormData: {}
       filterState: {}
       ownState: {}
     cascadeParentIds:
-    - NATIVE_FILTER-piRuw2c25
-    - NATIVE_FILTER-IimrPcVhk
+    - NATIVE_FILTER-_SzMBkp3w
+    - NATIVE_FILTER-eW0aXRxZ9
     scope:
       rootPath:
       - ROOT_ID
@@ -276,12 +227,12 @@ metadata:
     type: NATIVE_FILTER
     description: ''
     chartsInScope:
-    - 27
-    - 28
-    - 29
-    - 30
+    - 1
+    - 2
+    - 3
+    - 4
     tabsInScope: []
-  - id: NATIVE_FILTER_DIVIDER-aLJwF-U9o
+  - id: NATIVE_FILTER_DIVIDER-50wsyy1r2
     type: DIVIDER
     scope:
       rootPath:
@@ -290,7 +241,9 @@ metadata:
     title: "\u179A\u1799\u17C8\u1796\u17C1\u179B\u179A\u17B6\u1799\u1780\u17B6\u179A\
       \u178E\u17CD (Reporting Period)"
     description: ''
-  - id: NATIVE_FILTER-intpHMqxY
+    chartsInScope: []
+    tabsInScope: []
+  - id: NATIVE_FILTER-3I-WO1dDu
     controlValues:
       enableEmptyFilter: false
     name: "\u1787\u17BD\u179A\u1796\u17C1\u179B\u179C\u17C1\u179B\u17B6 (Time Range)"
@@ -308,14 +261,10 @@ metadata:
       excluded: []
     type: NATIVE_FILTER
     description: ''
-  global_chart_configuration:
-    scope:
-      rootPath:
-      - ROOT_ID
-      excluded: []
     chartsInScope:
-    - 27
-    - 28
-    - 29
-    - 30
+    - 1
+    - 2
+    - 3
+    - 4
+    tabsInScope: []
 version: 1.0.0
