--- a/base/configs/superset/assets/dashboards/HC_NCD_OPD_Register_Report_Dashboard_8.yaml
+++ b/base/configs/superset/assets/dashboards/HC_NCD_OPD_Register_Report_Dashboard_8.yaml
@@ -1,32 +1,30 @@
-dashboard_title: "\u17B1\u179F\u1790\u178A\u17C2\u179B\u1794\u17B6\u1793\u1794\u17D2\
-  \u179A\u17BE (Drugs use)"
+dashboard_title: HC NCD OPD Register Report Dashboard
 description: null
 css: ''
 slug: null
-certified_by: null
-certification_details: null
+certified_by: ''
+certification_details: ''
 published: true
-uuid: 63accbb1-bac7-4f32-94ae-943e4521e18d
+uuid: 5ad1d328-14a9-4063-bc27-ee40546d7581
 position:
-  CHART-gfnDjBja_j:
+  CHART-Ab9xXvvBoP:
     children: []
-    id: CHART-gfnDjBja_j
+    id: CHART-Ab9xXvvBoP
     meta:
-      chartId: 24
-      height: 111
-      sliceName: "\u17B1\u179F\u1790\u178A\u17C2\u179B\u1794\u17B6\u1793\u1794\u17D2\
-        \u179A\u17BE (Drug Use)"
-      uuid: 979e89f3-4a04-4333-a91a-f2d10b17cd6b
-      width: 7
+      chartId: 48
+      height: 76
+      sliceName: HC NCD OPD Register Report
+      uuid: 21650553-f9e7-4249-a0b2-088c1aaca1ea
+      width: 12
     parents:
     - ROOT_ID
     - GRID_ID
-    - ROW-W--1eFnYmI
+    - ROW-XCnHAguP-V
     type: CHART
   DASHBOARD_VERSION_KEY: v2
   GRID_ID:
     children:
-    - ROW-W--1eFnYmI
+    - ROW-XCnHAguP-V
     id: GRID_ID
     parents:
     - ROOT_ID
@@ -34,18 +32,17 @@ position:
   HEADER_ID:
     id: HEADER_ID
     meta:
-      text: "\u17B1\u179F\u1790\u178A\u17C2\u179B\u1794\u17B6\u1793\u1794\u17D2\u179A\
-        \u17BE (Drugs use)"
+      text: HC NCD OPD Register Report Dashboard
     type: HEADER
   ROOT_ID:
     children:
     - GRID_ID
     id: ROOT_ID
     type: ROOT
-  ROW-W--1eFnYmI:
+  ROW-XCnHAguP-V:
     children:
-    - CHART-gfnDjBja_j
-    id: ROW-W--1eFnYmI
+    - CHART-Ab9xXvvBoP
+    id: ROW-XCnHAguP-V
     meta:
       background: BACKGROUND_TRANSPARENT
     parents:
@@ -62,21 +59,27 @@ metadata:
   timed_refresh_immune_slices: []
   cross_filters_enabled: false
   default_filters: '{}'
-  chart_configuration: {}
+  chart_configuration:
+    '48':
+      id: 48
+      crossFilters:
+        scope: global
+        chartsInScope: []
   native_filter_configuration:
-  - id: NATIVE_FILTER-rl5sVOsxi
+  - id: NATIVE_FILTER-aWX-Gl58W
     controlValues:
       enableEmptyFilter: false
       defaultToFirstItem: false
       multiSelect: true
       searchAllOptions: true
       inverseSelection: false
-    name: "\u1781\u17C1\u178F\u17D2\u178F (Province)"
+    name: "\u1798\u1793\u17D2\u1791\u17B8\u179A\u179F\u17BB\u1781\u17B6\u1797\u17B7\
+      \u1794\u17B6\u179B\u1781\u17C1\u178F\u17D2\u178F (Provincial Health Department)"
     filterType: filter_select
     targets:
     - column:
-        name: health_facility_province
-      datasetUuid: d728f593-99b5-402e-997f-fd71dbde1d75
+        name: Facility Province
+      datasetUuid: 262d446a-2c07-4b3b-8ab0-a792b242dea4
     defaultDataMask:
       extraFormData: {}
       filterState: {}
@@ -89,9 +92,9 @@ metadata:
     type: NATIVE_FILTER
     description: ''
     chartsInScope:
-    - 66
+    - 48
     tabsInScope: []
-  - id: NATIVE_FILTER-p6DPqaTV-
+  - id: NATIVE_FILTER-Msdpr8SxL
     controlValues:
       enableEmptyFilter: false
       defaultToFirstItem: false
@@ -99,18 +102,18 @@ metadata:
       searchAllOptions: true
       inverseSelection: false
     name: "\u179F\u17D2\u179A\u17BB\u1780\u1794\u17D2\u179A\u178F\u17B7\u1794\u178F\
-      \u17D2\u178F\u17B7 (District)"
+      \u17D2\u178F\u17B7 (Operational District)"
     filterType: filter_select
     targets:
     - column:
-        name: health_facility_district
-      datasetUuid: d728f593-99b5-402e-997f-fd71dbde1d75
+        name: Facility District
+      datasetUuid: 262d446a-2c07-4b3b-8ab0-a792b242dea4
     defaultDataMask:
       extraFormData: {}
       filterState: {}
       ownState: {}
     cascadeParentIds:
-    - NATIVE_FILTER-rl5sVOsxi
+    - NATIVE_FILTER-aWX-Gl58W
     scope:
       rootPath:
       - ROOT_ID
@@ -118,48 +121,45 @@ metadata:
     type: NATIVE_FILTER
     description: ''
     chartsInScope:
-    - 66
+    - 48
     tabsInScope: []
-  - id: NATIVE_FILTER-P1wBhu7bt
+  - id: NATIVE_FILTER-pJ6UTB2-p
     controlValues:
       enableEmptyFilter: false
       defaultToFirstItem: false
       multiSelect: true
       searchAllOptions: true
       inverseSelection: false
-    name: "\u1798\u17BC\u179B\u178A\u17D2\u178B\u17B6\u1793\u179F\u17BB\u1781\u17B6\
-      \u1797\u17B7\u1794\u17B6\u179B (Health Facility)"
+    name: "\u1788\u17D2\u1798\u17C4\u17C7\u1793\u17B7\u1784\u179B\u17C1\u1781\u1780\
+      \u17BC\u178A\u1798\u17BC\u179B\u178A\u17D2\u178B\u17B6\u1793\u179F\u17BB\u1781\
+      \u17B6\u1797\u17B7\u1794\u17B6\u179B (Health Facility's Name)"
     filterType: filter_select
     targets:
     - column:
-        name: health_facility_name
-      datasetUuid: d728f593-99b5-402e-997f-fd71dbde1d75
+        name: Facility Name
+      datasetUuid: 262d446a-2c07-4b3b-8ab0-a792b242dea4
     defaultDataMask:
       extraFormData: {}
       filterState: {}
       ownState: {}
     cascadeParentIds:
-    - NATIVE_FILTER-rl5sVOsxi
-    - NATIVE_FILTER-p6DPqaTV-
+    - NATIVE_FILTER-aWX-Gl58W
+    - NATIVE_FILTER-Msdpr8SxL
     scope:
       rootPath:
       - ROOT_ID
       excluded: []
     type: NATIVE_FILTER
     description: ''
-  - id: NATIVE_FILTER_DIVIDER-ZZYhkwKAe
-    type: DIVIDER
-    scope:
-      rootPath:
-      - ROOT_ID
-      excluded: []
-    title: "\u179A\u1799\u17C8\u1796\u17C1\u179B\u179A\u17B6\u1799\u1780\u17B6\u179A\
-      \u178E\u17CD (Reporting Period)"
-    description: ''
-  - id: NATIVE_FILTER-NSyyBr1X7
+    chartsInScope:
+    - 48
+    tabsInScope: []
+  - id: NATIVE_FILTER-a7uk2DuoT
     controlValues:
       enableEmptyFilter: false
-    name: "\u1787\u17BD\u179A\u1796\u17C1\u179B\u179C\u17C1\u179B\u17B6 (Time Range)"
+    name: "\u1780\u17B6\u179A\u179A\u17B6\u1799\u1780\u17B6\u179A\u178E\u17CD\u17A2\
+      \u17C6\u1796\u17B8\u1787\u17BD\u179A\u1796\u17C1\u179B\u179C\u17C1\u179B\u17B6\
+      \ (Reporting Time Range)"
     filterType: filter_time
     targets:
     - {}
@@ -174,4 +174,14 @@ metadata:
       excluded: []
     type: NATIVE_FILTER
     description: ''
+    chartsInScope:
+    - 142
+    tabsInScope: []
+  global_chart_configuration:
+    scope:
+      rootPath:
+      - ROOT_ID
+      excluded: []
+    chartsInScope:
+    - 48
 version: 1.0.0
