--- a/base/configs/superset/assets/dashboards/NCD_HC_EMR_Raw_Data_21.yaml
+++ b/base/configs/superset/assets/dashboards/NCD_HC_EMR_Raw_Data_21.yaml
@@ -1,44 +1,30 @@
-dashboard_title: Indicators for annual monitoring and evaluation Hypertension and
-  Diabetes management program
+dashboard_title: NCD HC EMR Raw Data
 description: null
 css: ''
 slug: null
 certified_by: null
 certification_details: null
 published: true
-uuid: 1c38c06f-0a18-48df-9bf7-82facc3ecc6e
+uuid: f4a7d507-915c-4b9b-b4d6-fafccff2d8c3
 position:
-  CHART-explore-65-1:
+  CHART-explore-49-1:
     children: []
-    id: CHART-explore-65-1
+    id: CHART-explore-49-1
     meta:
-      chartId: 9
-      height: 104
-      sliceName: M&E Annual Indicators for Hypertension and Diabetes management program
-      sliceNameOverride: "\u1780\u1798\u17D2\u1798\u179C\u17B7\u1792\u17B8\u1796\u17B7\
-        \u1793\u17B7\u178F\u17D2\u1799\u179A\u1780\u17A0\u17B6\u1793\u17B7\u1797\u17D0\
-        \u1799\u1793\u17C3\u1787\u17C6\u1784\u17BA\u1794\u17C1\u17C7\u178A\u17BC\u1784\
-        \ \u179F\u179A\u179F\u17C3\u1788\u17B6\u1798 \u1793\u17B7\u1784\u1782\u17D2\
-        \u179A\u1794\u17CB\u1782\u17D2\u179A\u1784\u1787\u17C6\u1784\u17BA\u1791\u17B9\
-        \u1780\u1793\u17C4\u1798\u1795\u17D2\u17A2\u17C2\u1798\u1793\u17B7\u1784\u179B\
-        \u17BE\u179F\u179F\u1798\u17D2\u1796\u17B6\u1792\u1788\u17B6\u1798 \u1793\u17B9\
-        \u1784\u178F\u17D2\u179A\u17BC\u179C\u1794\u17B6\u1793\u179C\u17B6\u179F\u17CB\
-        \u179C\u17C2\u1784\u178A\u17C4\u1799\u1794\u17D2\u179A\u17BE\u179F\u17BC\u1785\
-        \u1793\u17B6\u1780\u179A(indicators)\u1794\u17D2\u179A\u1785\u17B6\u17C6\u1786\
-        \u17D2\u1793\u17B6\u17C6\u178A\u17BC\u1785\u1781\u17B6\u1784\u1780\u17D2\u179A\
-        \u17C4\u1798\u17D6 (Screening for CVD Risk and Diabetes and Hypertension Management\
-        \ program will be measured using the following annual indicators)"
-      uuid: 9bf461f4-855c-40af-9299-fd37dde51778
+      chartId: 47
+      height: 105
+      sliceName: NCD HC EMR Raw Data
+      uuid: 43fdf069-6fb1-436f-bfbb-43cd28a650d4
       width: 12
     parents:
     - ROOT_ID
     - GRID_ID
-    - ROW-t3pcetBBvm
+    - ROW-xbgfSH53z
     type: CHART
   DASHBOARD_VERSION_KEY: v2
   GRID_ID:
     children:
-    - ROW-t3pcetBBvm
+    - ROW-xbgfSH53z
     id: GRID_ID
     parents:
     - ROOT_ID
@@ -46,18 +32,17 @@ position:
   HEADER_ID:
     id: HEADER_ID
     meta:
-      text: Indicators for annual monitoring and evaluation Hypertension and Diabetes
-        management program
+      text: NCD HC EMR Raw Data
     type: HEADER
   ROOT_ID:
     children:
     - GRID_ID
     id: ROOT_ID
     type: ROOT
-  ROW-t3pcetBBvm:
+  ROW-xbgfSH53z:
     children:
-    - CHART-explore-65-1
-    id: ROW-t3pcetBBvm
+    - CHART-explore-49-1
+    id: ROW-xbgfSH53z
     meta:
       '0': ROOT_ID
       background: BACKGROUND_TRANSPARENT
@@ -74,9 +59,10 @@ metadata:
   label_colors: {}
   timed_refresh_immune_slices: []
   cross_filters_enabled: false
+  default_filters: '{}'
   chart_configuration: {}
   native_filter_configuration:
-  - id: NATIVE_FILTER-Y0eNqUA-h
+  - id: NATIVE_FILTER-5fqJvkq3x
     controlValues:
       enableEmptyFilter: false
       defaultToFirstItem: false
@@ -87,8 +73,8 @@ metadata:
     filterType: filter_select
     targets:
     - column:
-        name: health_facility_province
-      datasetUuid: aee334cc-f803-4296-8aad-948f4560bc0a
+        name: visit_province
+      datasetUuid: 6ce6fc9b-68dd-41b9-bc50-488d1285923e
     defaultDataMask:
       extraFormData: {}
       filterState: {}
@@ -101,28 +87,28 @@ metadata:
     type: NATIVE_FILTER
     description: ''
     chartsInScope:
-    - 65
+    - 49
     tabsInScope: []
-  - id: NATIVE_FILTER-ZvYlEwNch
+  - id: NATIVE_FILTER-ylmpHydXL
     controlValues:
       enableEmptyFilter: false
       defaultToFirstItem: false
       multiSelect: true
-      searchAllOptions: true
+      searchAllOptions: false
       inverseSelection: false
     name: "\u179F\u17D2\u179A\u17BB\u1780\u1794\u17D2\u179A\u178F\u17B7\u1794\u178F\
       \u17D2\u178F\u17B7 (District)"
     filterType: filter_select
     targets:
     - column:
-        name: health_facility_district
-      datasetUuid: aee334cc-f803-4296-8aad-948f4560bc0a
+        name: visit_district
+      datasetUuid: 6ce6fc9b-68dd-41b9-bc50-488d1285923e
     defaultDataMask:
       extraFormData: {}
       filterState: {}
       ownState: {}
     cascadeParentIds:
-    - NATIVE_FILTER-Y0eNqUA-h
+    - NATIVE_FILTER-5fqJvkq3x
     scope:
       rootPath:
       - ROOT_ID
@@ -130,29 +116,29 @@ metadata:
     type: NATIVE_FILTER
     description: ''
     chartsInScope:
-    - 65
+    - 49
     tabsInScope: []
-  - id: NATIVE_FILTER-WHKcu_Lp4
+  - id: NATIVE_FILTER-yvy-SL7is
     controlValues:
       enableEmptyFilter: false
       defaultToFirstItem: false
       multiSelect: true
-      searchAllOptions: true
+      searchAllOptions: false
       inverseSelection: false
     name: "\u1798\u17BC\u179B\u178A\u17D2\u178B\u17B6\u1793\u179F\u17BB\u1781\u17B6\
       \u1797\u17B7\u1794\u17B6\u179B (Health Facility)"
     filterType: filter_select
     targets:
     - column:
-        name: health_facility_name
-      datasetUuid: aee334cc-f803-4296-8aad-948f4560bc0a
+        name: hf_name
+      datasetUuid: 6ce6fc9b-68dd-41b9-bc50-488d1285923e
     defaultDataMask:
       extraFormData: {}
       filterState: {}
       ownState: {}
     cascadeParentIds:
-    - NATIVE_FILTER-Y0eNqUA-h
-    - NATIVE_FILTER-ZvYlEwNch
+    - NATIVE_FILTER-5fqJvkq3x
+    - NATIVE_FILTER-ylmpHydXL
     scope:
       rootPath:
       - ROOT_ID
@@ -160,9 +146,9 @@ metadata:
     type: NATIVE_FILTER
     description: ''
     chartsInScope:
-    - 65
+    - 49
     tabsInScope: []
-  - id: NATIVE_FILTER_DIVIDER-4PaLOlqql
+  - id: NATIVE_FILTER_DIVIDER-JQ_ZV_eGz
     type: DIVIDER
     scope:
       rootPath:
@@ -171,7 +157,7 @@ metadata:
     title: "\u179A\u1799\u17C8\u1796\u17C1\u179B\u179A\u17B6\u1799\u1780\u17B6\u179A\
       \u178E\u17CD (Reporting Period)"
     description: ''
-  - id: NATIVE_FILTER-axbb_AgVV
+  - id: NATIVE_FILTER-WcwyNteZj
     controlValues:
       enableEmptyFilter: false
     name: "\u1787\u17BD\u179A\u1796\u17C1\u179B\u179C\u17C1\u179B\u17B6 (Time Range)"
@@ -179,15 +165,14 @@ metadata:
     targets:
     - {}
     defaultDataMask:
-      extraFormData:
-        time_range: Last year
-      filterState:
-        value: Last year
+      extraFormData: {}
+      filterState: {}
+      ownState: {}
     cascadeParentIds: []
     scope:
       rootPath:
       - ROOT_ID
       excluded: []
     type: NATIVE_FILTER
-    description: Defaults to the last 12 months
+    description: ''
 version: 1.0.0
