--- a/base/configs/superset/assets/dashboards/NCD_HIS_Report_Dashboard_6.yaml
+++ b/base/configs/superset/assets/dashboards/NCD_HIS_Report_Dashboard_6.yaml
@@ -11,7 +11,7 @@ position:
     children: []
     id: CHART-K-4SQcOr5u
     meta:
-      chartId: 46
+      chartId: 31
       height: 42
       sliceName: NCD HIS New Cases From The Beginning
       uuid: edc6788b-ea27-457f-b3e7-1e272b7109ba
@@ -25,7 +25,7 @@ position:
     children: []
     id: CHART-explore-148-1
     meta:
-      chartId: 5
+      chartId: 4
       height: 50
       sliceName: NCD HIS Follow-up Cases Within Reporting Range
       uuid: e2896abd-821a-4aa8-8a19-c70c9eb18960
@@ -39,7 +39,7 @@ position:
     children: []
     id: CHART-explore-149-1
     meta:
-      chartId: 33
+      chartId: 13
       height: 50
       sliceName: NCD HIS Follow-up Cases From The Beginning
       uuid: 17f99ed6-713a-4436-9e7c-79639f96490c
@@ -53,7 +53,7 @@ position:
     children: []
     id: CHART-nSlyozQPY1
     meta:
-      chartId: 42
+      chartId: 40
       height: 42
       sliceName: NCD HIS New Cases Within Reporting Range
       uuid: b3599541-6658-4325-968b-82dd749af4ec
@@ -115,7 +115,39 @@ metadata:
   timed_refresh_immune_slices: []
   cross_filters_enabled: false
   default_filters: '{}'
-  chart_configuration: {}
+  chart_configuration:
+    '4':
+      id: 4
+      crossFilters:
+        scope: global
+        chartsInScope:
+        - 13
+        - 31
+        - 40
+    '13':
+      id: 13
+      crossFilters:
+        scope: global
+        chartsInScope:
+        - 4
+        - 31
+        - 40
+    '31':
+      id: 31
+      crossFilters:
+        scope: global
+        chartsInScope:
+        - 4
+        - 13
+        - 40
+    '40':
+      id: 40
+      crossFilters:
+        scope: global
+        chartsInScope:
+        - 4
+        - 13
+        - 31
   native_filter_configuration:
   - id: NATIVE_FILTER-sRZWuJkpb
     controlValues:
@@ -143,17 +175,10 @@ metadata:
     type: NATIVE_FILTER
     description: ''
     chartsInScope:
-    - 133
-    - 136
-    - 137
-    - 140
-    - 141
-    - 142
-    - 143
-    - 144
-    - 146
-    - 148
-    - 149
+    - 4
+    - 13
+    - 31
+    - 40
     tabsInScope: []
   - id: NATIVE_FILTER-IY0W6N-6N
     controlValues:
@@ -173,7 +198,8 @@ metadata:
       extraFormData: {}
       filterState: {}
       ownState: {}
-    cascadeParentIds: []
+    cascadeParentIds:
+    - NATIVE_FILTER-sRZWuJkpb
     scope:
       rootPath:
       - ROOT_ID
@@ -181,17 +207,10 @@ metadata:
     type: NATIVE_FILTER
     description: ''
     chartsInScope:
-    - 133
-    - 136
-    - 137
-    - 140
-    - 141
-    - 142
-    - 143
-    - 144
-    - 146
-    - 148
-    - 149
+    - 4
+    - 13
+    - 31
+    - 40
     tabsInScope: []
   - id: NATIVE_FILTER-LVKn33ZeF
     controlValues:
@@ -212,7 +231,9 @@ metadata:
       extraFormData: {}
       filterState: {}
       ownState: {}
-    cascadeParentIds: []
+    cascadeParentIds:
+    - NATIVE_FILTER-sRZWuJkpb
+    - NATIVE_FILTER-IY0W6N-6N
     scope:
       rootPath:
       - ROOT_ID
@@ -220,17 +241,10 @@ metadata:
     type: NATIVE_FILTER
     description: ''
     chartsInScope:
-    - 133
-    - 136
-    - 137
-    - 140
-    - 141
-    - 142
-    - 143
-    - 144
-    - 146
-    - 148
-    - 149
+    - 4
+    - 13
+    - 31
+    - 40
     tabsInScope: []
   - id: NATIVE_FILTER-yC5-Yil3K
     controlValues:
@@ -260,17 +274,10 @@ metadata:
     type: NATIVE_FILTER
     description: ''
     chartsInScope:
-    - 133
-    - 136
-    - 137
-    - 140
-    - 141
-    - 142
-    - 143
-    - 144
-    - 146
-    - 148
-    - 149
+    - 4
+    - 13
+    - 31
+    - 40
     tabsInScope: []
   - id: NATIVE_FILTER-hkcro12HK
     controlValues:
@@ -290,20 +297,13 @@ metadata:
       rootPath:
       - ROOT_ID
       excluded:
-      - 46
+      - 31
+      - 13
     type: NATIVE_FILTER
     description: ''
     chartsInScope:
-    - 133
-    - 136
-    - 137
-    - 140
-    - 141
-    - 142
-    - 143
-    - 146
-    - 148
-    - 149
+    - 4
+    - 40
     tabsInScope: []
   - id: NATIVE_FILTER-zzd1aTD-K
     controlValues:
@@ -315,21 +315,30 @@ metadata:
     targets:
     - {}
     defaultDataMask:
-      extraFormData:
-        time_range: 'Last 7 years : '
-      filterState:
-        value: 'Last 7 years : '
+      extraFormData: {}
+      filterState: {}
+      ownState: {}
     cascadeParentIds: []
     scope:
       rootPath:
       - ROOT_ID
       excluded:
-      - 5
-      - 42
+      - 4
+      - 40
     type: NATIVE_FILTER
     description: ''
     chartsInScope:
-    - 144
-    - 149
+    - 13
+    - 31
     tabsInScope: []
+  global_chart_configuration:
+    scope:
+      rootPath:
+      - ROOT_ID
+      excluded: []
+    chartsInScope:
+    - 4
+    - 13
+    - 31
+    - 40
 version: 1.0.0
