--- a/base/configs/superset/assets/dashboards/NCD_Missed_Appointments_Report_Dashboard_2.yaml
+++ b/base/configs/superset/assets/dashboards/NCD_Missed_Appointments_Report_Dashboard_2.yaml
@@ -11,7 +11,7 @@ position:
     children: []
     id: CHART-9_cxUnO_rZ
     meta:
-      chartId: 34
+      chartId: 25
       height: 74
       sliceName: NCD Appointment Report
       uuid: a5640d1c-bc02-4507-b639-787965bc42c7
@@ -57,7 +57,12 @@ metadata:
   timed_refresh_immune_slices: []
   cross_filters_enabled: false
   default_filters: '{}'
-  chart_configuration: {}
+  chart_configuration:
+    '25':
+      id: 25
+      crossFilters:
+        scope: global
+        chartsInScope: []
   native_filter_configuration:
   - id: NATIVE_FILTER-jvfgfSm-S
     controlValues:
@@ -85,7 +90,7 @@ metadata:
     type: NATIVE_FILTER
     description: ''
     chartsInScope:
-    - 141
+    - 25
     tabsInScope: []
   - id: NATIVE_FILTER-W14x47Ntg
     controlValues:
@@ -105,7 +110,8 @@ metadata:
       extraFormData: {}
       filterState: {}
       ownState: {}
-    cascadeParentIds: []
+    cascadeParentIds:
+    - NATIVE_FILTER-jvfgfSm-S
     scope:
       rootPath:
       - ROOT_ID
@@ -113,7 +119,7 @@ metadata:
     type: NATIVE_FILTER
     description: ''
     chartsInScope:
-    - 141
+    - 25
     tabsInScope: []
   - id: NATIVE_FILTER-Fd7aO5l2E
     controlValues:
@@ -134,7 +140,9 @@ metadata:
       extraFormData: {}
       filterState: {}
       ownState: {}
-    cascadeParentIds: []
+    cascadeParentIds:
+    - NATIVE_FILTER-jvfgfSm-S
+    - NATIVE_FILTER-W14x47Ntg
     scope:
       rootPath:
       - ROOT_ID
@@ -142,7 +150,7 @@ metadata:
     type: NATIVE_FILTER
     description: ''
     chartsInScope:
-    - 141
+    - 25
     tabsInScope: []
   - id: NATIVE_FILTER-NpwLz6Lx7
     controlValues:
@@ -169,4 +177,11 @@ metadata:
     tabsInScope: []
   shared_label_colors: {}
   color_scheme_domain: []
+  global_chart_configuration:
+    scope:
+      rootPath:
+      - ROOT_ID
+      excluded: []
+    chartsInScope:
+    - 25
 version: 1.0.0
