--- a/base/configs/superset/assets/dashboards/RH_NCD_OPD_Register_Report_Dashboard_3.yaml
+++ b/base/configs/superset/assets/dashboards/RH_NCD_OPD_Register_Report_Dashboard_3.yaml
@@ -1,30 +1,30 @@
-dashboard_title: CCS Referral Status Report Dashboard
+dashboard_title: RH NCD OPD Register Report Dashboard
 description: null
 css: ''
 slug: null
 certified_by: null
 certification_details: null
 published: true
-uuid: f2ceaa67-1e71-4ed4-ad56-b97f4f3682a9
+uuid: e6903ed0-2ba9-4187-b93b-1b2ad57a5a73
 position:
-  CHART-GU8MjxzP6B:
+  CHART-PscuRjwD2k:
     children: []
-    id: CHART-GU8MjxzP6B
+    id: CHART-PscuRjwD2k
     meta:
-      chartId: 25
-      height: 97
-      sliceName: CCS Referral Status Report
-      uuid: 14eb222c-0b43-4ba9-8617-dfeb3754bc46
+      chartId: 46
+      height: 83
+      sliceName: RH NCD OPD Register Report
+      uuid: 971a570a-0181-4e85-b6aa-f90ffd7e9926
       width: 12
     parents:
     - ROOT_ID
     - GRID_ID
-    - ROW-Rsxri3VTw8
+    - ROW-Fr6mw-Zlox
     type: CHART
   DASHBOARD_VERSION_KEY: v2
   GRID_ID:
     children:
-    - ROW-Rsxri3VTw8
+    - ROW-Fr6mw-Zlox
     id: GRID_ID
     parents:
     - ROOT_ID
@@ -32,17 +32,17 @@ position:
   HEADER_ID:
     id: HEADER_ID
     meta:
-      text: CCS Referral Status Report Dashboard
+      text: RH NCD OPD Register Report Dashboard
     type: HEADER
   ROOT_ID:
     children:
     - GRID_ID
     id: ROOT_ID
     type: ROOT
-  ROW-Rsxri3VTw8:
+  ROW-Fr6mw-Zlox:
     children:
-    - CHART-GU8MjxzP6B
-    id: ROW-Rsxri3VTw8
+    - CHART-PscuRjwD2k
+    id: ROW-Fr6mw-Zlox
     meta:
       background: BACKGROUND_TRANSPARENT
     parents:
@@ -52,14 +52,21 @@ position:
 metadata:
   color_scheme: ''
   refresh_frequency: 0
+  shared_label_colors: {}
+  color_scheme_domain: []
   expanded_slices: {}
   label_colors: {}
   timed_refresh_immune_slices: []
   cross_filters_enabled: false
   default_filters: '{}'
-  chart_configuration: {}
+  chart_configuration:
+    '46':
+      id: 46
+      crossFilters:
+        scope: global
+        chartsInScope: []
   native_filter_configuration:
-  - id: NATIVE_FILTER-np_ziSrzJ
+  - id: NATIVE_FILTER-MaX1fMSCW
     controlValues:
       enableEmptyFilter: false
       defaultToFirstItem: false
@@ -72,7 +79,7 @@ metadata:
     targets:
     - column:
         name: Facility Province
-      datasetUuid: 412423af-0fdd-4e33-b15d-2b63a9e213e1
+      datasetUuid: eae4ea82-b387-41fd-be9c-39bce338d4fa
     defaultDataMask:
       extraFormData: {}
       filterState: {}
@@ -85,9 +92,9 @@ metadata:
     type: NATIVE_FILTER
     description: ''
     chartsInScope:
-    - 136
+    - 46
     tabsInScope: []
-  - id: NATIVE_FILTER-BTQbykPsy
+  - id: NATIVE_FILTER-9kFNxXtAj
     controlValues:
       enableEmptyFilter: false
       defaultToFirstItem: false
@@ -100,12 +107,13 @@ metadata:
     targets:
     - column:
         name: Facility District
-      datasetUuid: 412423af-0fdd-4e33-b15d-2b63a9e213e1
+      datasetUuid: eae4ea82-b387-41fd-be9c-39bce338d4fa
     defaultDataMask:
       extraFormData: {}
       filterState: {}
       ownState: {}
-    cascadeParentIds: []
+    cascadeParentIds:
+    - NATIVE_FILTER-MaX1fMSCW
     scope:
       rootPath:
       - ROOT_ID
@@ -113,9 +121,9 @@ metadata:
     type: NATIVE_FILTER
     description: ''
     chartsInScope:
-    - 136
+    - 46
     tabsInScope: []
-  - id: NATIVE_FILTER-cwZV98z_b
+  - id: NATIVE_FILTER-j74t2tqer
     controlValues:
       enableEmptyFilter: false
       defaultToFirstItem: false
@@ -129,12 +137,14 @@ metadata:
     targets:
     - column:
         name: Facility Name
-      datasetUuid: 412423af-0fdd-4e33-b15d-2b63a9e213e1
+      datasetUuid: eae4ea82-b387-41fd-be9c-39bce338d4fa
     defaultDataMask:
       extraFormData: {}
       filterState: {}
       ownState: {}
-    cascadeParentIds: []
+    cascadeParentIds:
+    - NATIVE_FILTER-MaX1fMSCW
+    - NATIVE_FILTER-9kFNxXtAj
     scope:
       rootPath:
       - ROOT_ID
@@ -142,9 +152,9 @@ metadata:
     type: NATIVE_FILTER
     description: ''
     chartsInScope:
-    - 136
+    - 46
     tabsInScope: []
-  - id: NATIVE_FILTER-HPs6DabvT
+  - id: NATIVE_FILTER-iih629B5c
     controlValues:
       enableEmptyFilter: false
     name: "\u1780\u17B6\u179A\u179A\u17B6\u1799\u1780\u17B6\u179A\u178E\u17CD\u17A2\
@@ -165,8 +175,13 @@ metadata:
     type: NATIVE_FILTER
     description: ''
     chartsInScope:
-    - 136
+    - 146
     tabsInScope: []
-  shared_label_colors: {}
-  color_scheme_domain: []
+  global_chart_configuration:
+    scope:
+      rootPath:
+      - ROOT_ID
+      excluded: []
+    chartsInScope:
+    - 46
 version: 1.0.0
