--- a/base/configs/superset/assets/dashboards/Self-breast_Educated_and_Examinated_Women_7.yaml
+++ b/base/configs/superset/assets/dashboards/Self-breast_Educated_and_Examinated_Women_7.yaml
@@ -1,89 +1,92 @@
-dashboard_title: "\u1780\u17B6\u179A\u1796\u17B7\u1793\u17B7\u178F\u17D2\u1799\u179F\
-  \u17BB\u1781\u1797\u17B6\u1796\u179A\u1780\u1787\u17C6\u1784\u17BA\u1798\u17A0\u17B6\
-  \u179A\u17B8\u1780\u1798\u17B6\u178F\u17CB\u179F\u17D2\u1794\u17BC\u1793 (Cervical\
-  \ Cancer Screening for Women)"
+dashboard_title: "\u1780\u17B6\u179A\u17A2\u1794\u17CB\u179A\u17C6\u179F\u17D2\u178F\
+  \u17D2\u179A\u17B8\u17B1\u17D2\u1799\u1785\u17C1\u17C7\u1796\u17B7\u1793\u17B7\u178F\
+  \u17D2\u1799 \u1793\u17B7\u1784\u179F\u17D2\u1791\u17B6\u1794\u178A\u17C4\u17C7\u178A\
+  \u17C4\u1799\u1781\u17D2\u179B\u17BD\u1793\u17AF\u1784 (Self-breast Educated and\
+  \ Examinated Women)"
 description: null
 css: ''
 slug: null
 certified_by: null
 certification_details: null
 published: true
-uuid: 598a8f33-de25-4a18-91b5-a87652c0b1de
+uuid: 6e8f6cf5-6b61-4dbc-ad28-2d6b7d2a13e8
 position:
-  CHART-explore-1-1:
+  CHART-explore-5-1:
     children: []
-    id: CHART-explore-1-1
+    id: CHART-explore-5-1
     meta:
-      chartId: 37
-      height: 39
+      chartId: 52
+      height: 50
       sliceName: "\u1785\u17C6\u1793\u17BD\u1793\u179F\u17D2\u178F\u17D2\u179A\u17B8\
-        \u1794\u17B6\u1793 \u1792\u17D2\u179C\u17BE\u178F\u17C1\u179F\u17D2\u178F\
-        \ VIA (# of women with VIA tested)"
-      uuid: a57aa88b-eb68-4d6f-9061-107c47d6b76d
+        \u1794\u17B6\u1793\u17A2\u1794\u17CB\u179A\u17C6\u1793\u17B7\u1784\u1796\u17B7\
+        \u1793\u17B7\u178F\u17D2\u1799\u178A\u17C4\u17C7 (# of Women Educated with\
+        \ Breast Examination)"
+      uuid: 411a83c9-d9d1-40a1-abd6-fe56e1169388
       width: 5
     parents:
     - ROOT_ID
     - GRID_ID
-    - ROW-SynNTx6Wta
+    - ROW-aQB7JBxYgL
     type: CHART
-  CHART-explore-2-1:
+  CHART-explore-6-1:
     children: []
-    id: CHART-explore-2-1
+    id: CHART-explore-6-1
     meta:
-      chartId: 38
-      height: 39
+      chartId: 64
+      height: 50
       sliceName: "\u1785\u17C6\u1793\u17BD\u1793\u179F\u17D2\u178F\u17D2\u179A\u17B8\
         \u1780\u17D2\u1793\u17BB\u1784\u1798\u17BD\u1799\u1794\u17D2\u179A\u1797\u17C1\
-        \u1791\u1793\u17C3\u1780\u17B6\u179A\u1798\u1780\u179B\u17C1\u1784 (# of women\
-        \ per visit type)"
+        \u1791\u1793\u17C3\u1780\u17B6\u179A\u1798\u1780\u179B\u17C1\u1784 (# of Women\
+        \ per Visit Type)"
       sliceNameOverride: "\u1785\u17C6\u1793\u17BD\u1793\u179F\u17D2\u178F\u17D2\u179A\
         \u17B8\u1780\u17D2\u1793\u17BB\u1784\u1798\u17BD\u1799\u1794\u17D2\u179A\u1797\
         \u17C1\u1791\u1793\u17C3\u1780\u17B6\u179A\u1798\u1780\u179B\u17C1\u1784 (Visit\
         \ Type)"
-      uuid: ae4b7d1d-1bae-4a6f-bec4-71826613e857
+      uuid: 8a137f25-14a7-4a3e-a740-0cbd17ca1de1
       width: 7
     parents:
     - ROOT_ID
     - GRID_ID
-    - ROW-SynNTx6Wta
+    - ROW-aQB7JBxYgL
     type: CHART
-  CHART-explore-3-1:
+  CHART-explore-7-1:
     children: []
-    id: CHART-explore-3-1
+    id: CHART-explore-7-1
     meta:
-      chartId: 35
-      height: 43
+      chartId: 1
+      height: 50
       sliceName: "\u1780\u17B6\u179A\u1782\u17D2\u179A\u1794\u17CB\u1782\u17D2\u179A\
         \u1784 (Management)"
-      uuid: 87838d2c-ca56-44f1-a3a7-ec7648dddcc3
+      uuid: 8263131a-e7cf-414a-a89d-e742a454f032
       width: 5
     parents:
     - ROOT_ID
     - GRID_ID
-    - ROW-heF7YIV8Fy
+    - ROW-rxvWan3wgG
     type: CHART
-  CHART-explore-4-1:
+  CHART-explore-8-1:
     children: []
-    id: CHART-explore-4-1
+    id: CHART-explore-8-1
     meta:
-      chartId: 36
-      height: 43
-      sliceName: "\u179B\u1791\u17D2\u1792\u1795\u179B\u178F\u17C1\u179F\u17D2\u178F\
-        \ VIA (# of women per VIA result)"
-      sliceNameOverride: "\u179B\u1791\u17D2\u1792\u1795\u179B\u178F\u17C1\u179F\u17D2\
-        \u178F VIA (VIA result)"
-      uuid: bc93b773-a54f-4070-9624-681d4940207e
+      chartId: 20
+      height: 50
+      sliceName: "\u179B\u1791\u17D2\u1792\u1795\u179B\u1780\u17B6\u179A\u1796\u17B7\
+        \u1793\u17B7\u178F\u17D2\u1799\u179F\u17D2\u1791\u17B6\u1794\u178A\u17C4\u17C7\
+        \u178A\u17C4\u1799\u1798\u1793\u17D2\u178F\u17D2\u179A\u17B8\u179F\u17BB\u1781\
+        \u17B6\u1797\u17B7\u1794\u17B6\u179B (Result of Breast Examination by Health\
+        \ Staff)"
+      uuid: 70116224-991f-4856-9a6a-3c625f0ad796
       width: 7
     parents:
     - ROOT_ID
     - GRID_ID
-    - ROW-heF7YIV8Fy
+    - ROW-rxvWan3wgG
     type: CHART
   DASHBOARD_VERSION_KEY: v2
   GRID_ID:
     children:
-    - ROW-SynNTx6Wta
-    - ROW-heF7YIV8Fy
+    - ROW-aQB7JBxYgL
+    - ROW-rxvWan3wgG
     id: GRID_ID
     parents:
     - ROOT_ID
@@ -91,21 +94,22 @@ position:
   HEADER_ID:
     id: HEADER_ID
     meta:
-      text: "\u1780\u17B6\u179A\u1796\u17B7\u1793\u17B7\u178F\u17D2\u1799\u179F\u17BB\
-        \u1781\u1797\u17B6\u1796\u179A\u1780\u1787\u17C6\u1784\u17BA\u1798\u17A0\u17B6\
-        \u179A\u17B8\u1780\u1798\u17B6\u178F\u17CB\u179F\u17D2\u1794\u17BC\u1793 (Cervical\
-        \ Cancer Screening for Women)"
+      text: "\u1780\u17B6\u179A\u17A2\u1794\u17CB\u179A\u17C6\u179F\u17D2\u178F\u17D2\
+        \u179A\u17B8\u17B1\u17D2\u1799\u1785\u17C1\u17C7\u1796\u17B7\u1793\u17B7\u178F\
+        \u17D2\u1799 \u1793\u17B7\u1784\u179F\u17D2\u1791\u17B6\u1794\u178A\u17C4\u17C7\
+        \u178A\u17C4\u1799\u1781\u17D2\u179B\u17BD\u1793\u17AF\u1784 (Self-breast\
+        \ Educated and Examinated Women)"
     type: HEADER
   ROOT_ID:
     children:
     - GRID_ID
     id: ROOT_ID
     type: ROOT
-  ROW-SynNTx6Wta:
+  ROW-aQB7JBxYgL:
     children:
-    - CHART-explore-1-1
-    - CHART-explore-2-1
-    id: ROW-SynNTx6Wta
+    - CHART-explore-5-1
+    - CHART-explore-6-1
+    id: ROW-aQB7JBxYgL
     meta:
       '0': ROOT_ID
       background: BACKGROUND_TRANSPARENT
@@ -113,11 +117,11 @@ position:
     - ROOT_ID
     - GRID_ID
     type: ROW
-  ROW-heF7YIV8Fy:
+  ROW-rxvWan3wgG:
     children:
-    - CHART-explore-4-1
-    - CHART-explore-3-1
-    id: ROW-heF7YIV8Fy
+    - CHART-explore-8-1
+    - CHART-explore-7-1
+    id: ROW-rxvWan3wgG
     meta:
       '0': ROOT_ID
       background: BACKGROUND_TRANSPARENT
@@ -126,18 +130,63 @@ position:
     - GRID_ID
     type: ROW
 metadata:
-  color_scheme: ''
+  color_scheme: bnbColors
   refresh_frequency: 0
-  shared_label_colors: {}
-  color_scheme_domain: []
   expanded_slices: {}
   label_colors: {}
   timed_refresh_immune_slices: []
   cross_filters_enabled: false
   default_filters: '{}'
-  chart_configuration: {}
+  chart_configuration:
+    '27':
+      id: 27
+      crossFilters:
+        scope: global
+        chartsInScope:
+        - 28
+        - 29
+        - 30
+    '28':
+      id: 28
+      crossFilters:
+        scope: global
+        chartsInScope:
+        - 27
+        - 29
+        - 30
+    '29':
+      id: 29
+      crossFilters:
+        scope: global
+        chartsInScope:
+        - 27
+        - 28
+        - 30
+    '30':
+      id: 30
+      crossFilters:
+        scope: global
+        chartsInScope:
+        - 27
+        - 28
+        - 29
+  shared_label_colors: {}
+  color_scheme_domain:
+  - '#29696B'
+  - '#5BCACE'
+  - '#F4B02A'
+  - '#F1826A'
+  - '#792EB2'
+  - '#C96EC6'
+  - '#921E50'
+  - '#B27700'
+  - '#9C3498'
+  - '#9C3498'
+  - '#E4679D'
+  - '#C32F0E'
+  - '#9D63CA'
   native_filter_configuration:
-  - id: NATIVE_FILTER-_SzMBkp3w
+  - id: NATIVE_FILTER-piRuw2c25
     controlValues:
       enableEmptyFilter: false
       defaultToFirstItem: false
@@ -149,7 +198,7 @@ metadata:
     targets:
     - column:
         name: health_facility_province
-      datasetUuid: 105ff668-0cd3-4674-82d2-bcecc6813280
+      datasetUuid: ae55d2c5-1889-45e0-899e-a54beba3e234
     defaultDataMask:
       extraFormData: {}
       filterState: {}
@@ -162,31 +211,31 @@ metadata:
     type: NATIVE_FILTER
     description: ''
     chartsInScope:
-    - 1
-    - 2
-    - 3
-    - 4
+    - 27
+    - 28
+    - 29
+    - 30
     tabsInScope: []
-  - id: NATIVE_FILTER-eW0aXRxZ9
+  - id: NATIVE_FILTER-IimrPcVhk
     controlValues:
       enableEmptyFilter: false
       defaultToFirstItem: false
       multiSelect: true
       searchAllOptions: true
-      inverseSelection: false
+      inverseSelection: true
     name: "\u179F\u17D2\u179A\u17BB\u1780\u1794\u17D2\u179A\u178F\u17B7\u1794\u178F\
       \u17D2\u178F\u17B7 (District)"
     filterType: filter_select
     targets:
     - column:
         name: health_facility_district
-      datasetUuid: 105ff668-0cd3-4674-82d2-bcecc6813280
+      datasetUuid: ae55d2c5-1889-45e0-899e-a54beba3e234
     defaultDataMask:
       extraFormData: {}
       filterState: {}
       ownState: {}
     cascadeParentIds:
-    - NATIVE_FILTER-_SzMBkp3w
+    - NATIVE_FILTER-piRuw2c25
     scope:
       rootPath:
       - ROOT_ID
@@ -194,32 +243,32 @@ metadata:
     type: NATIVE_FILTER
     description: ''
     chartsInScope:
-    - 1
-    - 2
-    - 3
-    - 4
+    - 27
+    - 28
+    - 29
+    - 30
     tabsInScope: []
-  - id: NATIVE_FILTER-NjorMjb0S
+  - id: NATIVE_FILTER-mQnv_2Xkn
     controlValues:
       enableEmptyFilter: false
       defaultToFirstItem: false
       multiSelect: true
       searchAllOptions: true
-      inverseSelection: false
+      inverseSelection: true
     name: "\u1798\u17BC\u179B\u178A\u17D2\u178B\u17B6\u1793\u179F\u17BB\u1781\u17B6\
       \u1797\u17B7\u1794\u17B6\u179B (Health Facility)"
     filterType: filter_select
     targets:
     - column:
         name: health_facility_name
-      datasetUuid: 105ff668-0cd3-4674-82d2-bcecc6813280
+      datasetUuid: ae55d2c5-1889-45e0-899e-a54beba3e234
     defaultDataMask:
       extraFormData: {}
       filterState: {}
       ownState: {}
     cascadeParentIds:
-    - NATIVE_FILTER-_SzMBkp3w
-    - NATIVE_FILTER-eW0aXRxZ9
+    - NATIVE_FILTER-piRuw2c25
+    - NATIVE_FILTER-IimrPcVhk
     scope:
       rootPath:
       - ROOT_ID
@@ -227,12 +276,12 @@ metadata:
     type: NATIVE_FILTER
     description: ''
     chartsInScope:
-    - 1
-    - 2
-    - 3
-    - 4
+    - 27
+    - 28
+    - 29
+    - 30
     tabsInScope: []
-  - id: NATIVE_FILTER_DIVIDER-50wsyy1r2
+  - id: NATIVE_FILTER_DIVIDER-aLJwF-U9o
     type: DIVIDER
     scope:
       rootPath:
@@ -241,9 +290,7 @@ metadata:
     title: "\u179A\u1799\u17C8\u1796\u17C1\u179B\u179A\u17B6\u1799\u1780\u17B6\u179A\
       \u178E\u17CD (Reporting Period)"
     description: ''
-    chartsInScope: []
-    tabsInScope: []
-  - id: NATIVE_FILTER-3I-WO1dDu
+  - id: NATIVE_FILTER-intpHMqxY
     controlValues:
       enableEmptyFilter: false
     name: "\u1787\u17BD\u179A\u1796\u17C1\u179B\u179C\u17C1\u179B\u17B6 (Time Range)"
@@ -261,10 +308,14 @@ metadata:
       excluded: []
     type: NATIVE_FILTER
     description: ''
+  global_chart_configuration:
+    scope:
+      rootPath:
+      - ROOT_ID
+      excluded: []
     chartsInScope:
-    - 1
-    - 2
-    - 3
-    - 4
-    tabsInScope: []
+    - 27
+    - 28
+    - 29
+    - 30
 version: 1.0.0
